tests/snapshots/render/ansi@commonmark-spec-001-tabs.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/001-tabs.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33mfoo	baz		bim[0m                                                                   [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
