tests/snapshots/render/ansi@commonmark-spec-018-backslash_escapes.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/018-backslash_escapes.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m\[\]                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
