tests/snapshots/render/ansi@commonmark-spec-019-backslash_escapes.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/019-backslash_escapes.md
snapshot_kind: text
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0m[33m\[\][0m                                                                        [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
