tests/snapshots/render/ansi@commonmark-spec-024-backslash_escapes.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/024-backslash_escapes.md
---
[32m╭── foo+bar ───────────────────────────────────────────────────────────────────╮[0m
[32m│ [0mfoo                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
