tests/snapshots/render/ansi@commonmark-spec-034-entity_and_numeric_character_references.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/034-entity_and_numeric_character_references.md
---
[32m╭── föö ───────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0mfoo                                                                         [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
